# morse-jsbsim

./: .gitignore  .travis.bash  .travis.yml  README.md  TODO  aircraft.fed  cmake-pyhla.patch  default.py
cpp/: CMakeLists.txt  jsbsim_node.cc  jsbsim_node.hh  main.cc
jsbsim/aircraft/: simple_quad.xml
scripts/: morse-jsbsim_client.py  send_command.py
src/jsbsim/actuators/: directcontrol.py
src/jsbsim/builder/: jsbsim.py
src/jsbsim/builder/actuators/: __init__.py  directcontrol.py
src/jsbsim/builder/sensors/: __init__.py  jsbsimmagnetometer.py
src/jsbsim/middleware/hla/: read_aircraft_input.py  read_magnetometer_input.py  write_aircraft_ctrl.py
src/jsbsim/modifiers/: body_ned.py
src/jsbsim/sensors/: jsbsim_magnetometer.py
